[tool.poetry]
name = "baby-steps-of-rl-ja"
version = "0.1.0"
description = ""
authors = ["Kazutoshi Umemoto <umemoto@tkl.iis.u-tokyo.ac.jp>"]

[tool.poetry.dependencies]
python = "~3.7"
gym = "^0.17.2"
jupyter = "^1.0.0"
numpy = "^1.19.1"
pandas = "^1.1.1"
scipy = "^1.5.2"
scikit-learn = "^0.23.2"
matplotlib = "^3.3.1"
tensorflow = "<2"
ple = {git = "https://github.com/ntasfi/PyGame-Learning-Environment.git"}
gym-ple = {git = "https://github.com/lusob/gym-ple.git"}
h5py = "^2.10.0"
pygame = "^1.9.6"
tqdm = "^4.48.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
